--- a/examples/machine-controller.yaml
+++ b/examples/machine-controller.yaml
@@ -382,14 +382,6 @@ metadata:
     local-testing: "true"
 rules:
 - apiGroups:
-  - "apiextensions.k8s.io"
-  resources:
-  - "customresourcedefinitions"
-  resourceNames:
-  - "machines.machine.k8s.io"
-  verbs:
-  - "delete"
-- apiGroups:
   - ""
   resources:
   - "events"
@@ -403,6 +395,8 @@ rules:
   verbs:
   - "create"
   - "get"
+  - "list"
+  - "watch"
 - apiGroups:
   - "apiextensions.k8s.io"
   resources:
